tests/untried/neg/t3403.scala
import scala.beans.{BeanProperty as bp}
class Foo { @bp var bar: Int = 1 }
